# DiscOpen

./: .gitignore  README.md
core/: CMakeLists.txt
core/client/: CMakeLists.txt
core/client/src/: channel.h  cli.cpp  cli.h  client_server.cpp  client_server.h  main.cpp  message.cpp  message.h  user.cpp  user.h
core/common/: CMakeLists.txt
core/common/include/: colours.h  common.h  packet.h
core/common/src/: common.cpp  packet.cpp
core/server/: CMakeLists.txt
core/server/src/: client.cpp  client.h  main.cpp  serevr_fm.h  server.cpp  server.h  server_fm.cpp  server_user.h
